Sun Jul 11 14:56:27 GMT 2010  Olly Betts <olly@survex.com>

	* common/fileutils.cc,tests/Makefile.am,tests/unittest.cc: Move the
	  tests of resolve_relative_path() into a new "unittest" program so
	  they actually are run by "make check".  (ticket#243)

Sun Jul 11 13:14:24 GMT 2010  Olly Betts <olly@survex.com>

	* common/fileutils.cc: Support the \\?\ path syntax.

Sat Jul 10 15:49:08 GMT 2010  Olly Betts <olly@survex.com>

	* common/fileutils.cc,common/fileutils.h: Fix resolve_relative_path()
	  to handle UNC paths.

Sat Jul 10 15:27:48 GMT 2010  Olly Betts <olly@survex.com>

	* common/fileutils.cc: -D__WIN32__ on the g++ command line works for
	  testing on Linux, so no need to have that in the code.  Add a couple
	  of UNC path test cases which pass, and a commented-out one which
	  fails.

Sat Jul 10 14:58:35 GMT 2010  Olly Betts <olly@survex.com>

	* common/fileutils.cc,common/fileutils.h: We use these routines to
	  resolve a relative path (in a stub database file) in terms of a
	  second path (the filename of that file), so just instead a
	  routine to do exactly that, which is easier to code and more
	  efficient.  The new implementation fixes several bugs with
	  Microsoft Windows paths.  Some testcases (currently not used)
	  are now present in fileutils.cc (ticket#243).
	* backends/dbfactory.cc: Use the new API.

Fri Jul 09 07:42:31 GMT 2010  Olly Betts <olly@survex.com>

	* tests/perftest/perftest.cc: I missed a use of atoi() on std::string
	  but just call .cstr() on the string instead of dragging in utils.h.

Fri Jul 09 04:39:40 GMT 2010  Olly Betts <olly@survex.com>

	* common/utils.cc,common/utils.h: Remove unused std::string to const
	  char * wrappers for standard functions, and remove the only use of
	  rmdir()'s wrapper.

Thu Jul 08 15:18:04 GMT 2010  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Xapian::ESet is a reference counted handle, so it
	  is efficient to return by value - remove FIXME which suggests we
	  should avoid doing so.
